# libsodium-file-crypter

./: CMakeLists.txt  README.md
